--- a/advice.css
+++ b/advice.css
@@ -73,3 +73,20 @@ body {
         /* margin: 0 15px; */
     }
 }
+
+.timer {
+    border: 1px solid white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: -25px;
+    right: -25px;
+    background: white;
+    color: black;
+    font-size: 20px;
+    font-weight: 800;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
